<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="de.vacaverde.vacaverde.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="15dp"
            android:paddingTop="8dp"
            android:text="@string/name"
            android:textColor="@color/text"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/shapes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal">

            <ViewFlipper
                android:id="@+id/flip"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/pict0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/foto01" />

                <ImageView
                    android:id="@+id/pict1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/foto03" />

                <ImageView
                    android:id="@+id/pict2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/foto04" />

                <ImageView
                    android:id="@+id/pict3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/foto05" />

                <ImageView
                    android:id="@+id/pict4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/foto07" />

            </ViewFlipper>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundInfo"
            android:padding="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/GridLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    android:rowCount="5">

                    <ImageView
                        android:id="@+id/menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/icon_marginTop2"
                        android:onClick="openBrowser"
                        android:scaleType="fitCenter"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1"
                        android:src="@drawable/ic_restaurant_menu_black_24dp"
                        android:tag="@string/menuURL"
                        android:tint="@color/text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/icon_marginLeft"
                        android:layout_marginStart="@dimen/icon_marginLeft"
                        android:layout_marginTop="@dimen/margin_IconLine"
                        android:onClick="openBrowser"
                        android:tag="@string/menuURL"
                        android:text="@string/menu"
                        android:textColor="@color/text"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/icon_marginTop"
                        android:onClick="openMap"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_location_on_black_24dp"
                        android:tint="@color/text" />

                    <TextView
                        android:id="@+id/adress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/icon_marginLeft"
                        android:layout_marginStart="@dimen/icon_marginLeft"
                        android:layout_marginTop="@dimen/margin_IconLine"
                        android:onClick="openMap"
                        android:text="@string/adress"
                        android:textColor="@color/text"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/icon_marginTop"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_access_time_black_24dp"
                        android:tint="@color/text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/icon_marginLeft"
                        android:layout_marginStart="@dimen/icon_marginLeft"
                        android:layout_marginTop="@dimen/margin_IconLine"
                        android:text="@string/open"
                        android:textColor="@color/text"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/icon_marginTop2"
                        android:clickable="true"
                        android:onClick="call_number"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_call_black_24dp"
                        android:tint="@color/text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/icon_marginLeft"
                        android:layout_marginStart="@dimen/icon_marginLeft"
                        android:layout_marginTop="@dimen/margin_IconLine"
                        android:clickable="true"
                        android:onClick="call_number"
                        android:text="@string/phone"
                        android:textColor="@color/text"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/icon_marginTop2"
                        android:onClick="openBrowser"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_grade_black_24dp"
                        android:tag="@string/yelpURL"
                        android:tint="@color/text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/icon_marginLeft"
                        android:layout_marginStart="@dimen/icon_marginLeft"
                        android:layout_marginTop="@dimen/margin_IconLine"
                        android:onClick="openBrowser"
                        android:tag="@string/yelpURL"
                        android:text="@string/rate"
                        android:textColor="@color/text"
                        android:textSize="14sp" />

                </GridLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/GridLayout1"
                    android:layout_marginTop="12dp"
                    android:text="@string/about"
                    android:textColor="@color/text"
                    android:textSize="14sp" />

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
